--- a/10 вопросов и ответов.md
+++ b/10 вопросов и ответов.md
@@ -1,3 +1,5 @@
+![image](https://github.com/user-attachments/assets/399be2f1-8457-415a-b5c0-993bff923d8f)
+
 ### Java Collections
 
 **1. Какова временная сложность операций в `HashMap`?**
